@@ -1,24 +1,14 @@
 module BuildsHelper
   def build_ref_link build
-    if build.commit.gitlab?
-      gitlab_ref_link build.project, build.ref
-    else
-      build.ref
-    end
+    gitlab_ref_link build.project, build.ref
   end
 
   def build_compare_link build
-    if build.commit.gitlab?
-      gitlab_compare_link build.project, build.commit.short_before_sha, build.short_sha
-    end
+    gitlab_compare_link build.project, build.commit.short_before_sha, build.short_sha
   end
 
   def build_commit_link build
-    if build.commit.gitlab?
-      gitlab_commit_link build.project, build.short_sha
-    else
-      build.short_sha
-    end
+    gitlab_commit_link build.project, build.short_sha
   end
 
   def build_url(build)
