@@ -1,6 +1,0 @@
-%h3 New project
-
-= link_to projects_path do
-  &larr; Back to projects
-%hr
-= render 'form'
