@@ -5,6 +5,8 @@ v7.11.0
   - Running and Pending tabs on admin builds page
   - Fix [ci skip] tag, so you can skip CI triggering now
   - Add HipChat notifications
+  - Clean up project advanced settings.
+  - Add a GitLab project path parameter to the project API
 
 v7.10.1
   - Fix failing migration when update to 7.10 from 7.8 and older versions
